--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Quiz"
         tools:targetApi="31">
+
+        <!--    Читы -->
+        <activity
+            android:name=".CheatActivity"
+            android:exported="false"
+            android:label="@string/title_activity_cheat"/>
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
